--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <div class="navbar" id="blogEntry">
         <a href="home.html">Home</a>
         <a href="favorites.html">My Favorite Things</a>
         <a href="gallery.html">Gallery</a>
@@ -17,5 +17,68 @@
         <a href="survey.html">Survey</a>
         <a href="contact.html">Contact</a>
     </div>
+    <div class="blog">
+        <div class="blogText">
+            <textarea rows="20" cols="100" placeholder="Type here..."></textarea>
+            <input type="submit" value="Post">
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+    </div>
+    <div class="blog" id="lower">
+        
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+        <div>
+            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
+            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+        </div>
+
+    </div>
+    
 </body>
 </html>
