--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,11 @@
         <a href="survey.html">Survey</a>
         <a href="contact.html">Contact</a>
     </div>
+    <div class="main">
+        <p><strong>You can reach me at the following links:</strong></p>
+        <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/512px-Gmail_icon_%282020%29.svg.png" id="gmail">E-mail: <a href="mailto:krstevski1petar@gmail.com">krstevski1petar@gmail.com</a></p>
+        <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png">Instagram: <a href="https://www.instagram.com/pkrstevski1/">pkrstevski1</a></p>
+        <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Facebook_icon_2013.svg/768px-Facebook_icon_2013.svg.png">Facebook: <a href="https://www.facebook.com/profile.php?id=100008615229598">https://www.facebook.com/profile.php?id=100008615229598</a></p>
+    </div>
 </body>
 </html>
