--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,18 @@
 </head>
 
 <body>
-    <div class="navbar" id="blogEntry">
-        <a href="home.html">Home</a>
-        <a href="favorites.html">My Favorite Things</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="blog.html">Blog</a>
-        <a href="survey.html">Survey</a>
-        <a href="contact.html">Contact</a>
+    <header>
+        <div class="navbar">
+            <a href="home.html">Home</a>
+            <a href="favorites.html">My Favorite Things</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="survey.html">Survey</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </header>
+    <div class="main">
+        My blog
     </div>
     <div class="blog">
         <div class="blogText">
@@ -23,62 +28,154 @@
             <input type="submit" value="Post">
         </div>
         <div>
-            <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p style="text-align: left;" class="dateNtime">11:40 25.10.2021</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
     </div>
     <div class="blog" id="lower">
-        
+
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
         <div>
             <p style="text-align: left;" class="dateNtime">10:42 25.10.2021</p>
-            <p> This is where a post would be if I knew how to implement it with JavaScript.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis dolor velit, egestas
+                tempor tortor vulputate non. Donec tristique fringilla mauris, id rutrum metus scelerisque sed.
+                Curabitur bibendum nisl vel nunc ullamcorper posuere. Pellentesque sed maximus leo. Maecenas consectetur
+                vitae velit et vestibulum. Pellentesque ut ipsum pulvinar, aliquet neque nec, condimentum felis. Donec
+                volutpat, quam ut imperdiet tincidunt, neque ipsum vehicula massa, quis consequat erat lacus quis leo.
+                Donec tincidunt, quam id congue molestie, urna velit eleifend sem, a blandit justo metus eget nisl.
+                Aliquam venenatis bibendum felis non efficitur. Vestibulum imperdiet ut quam et imperdiet. Quisque non
+                urna tristique felis lacinia iaculis ac nec arcu. </p>
         </div>
 
     </div>
-    
+
 </body>
+
 </html>
