--- a/favorites.html
+++ b/favorites.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <a href="home.html">Home</a>
-        <a href="favorites.html">My Favorite Things</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="blog.html">Blog</a>
-        <a href="survey.html">Survey</a>
-        <a href="contact.html">Contact</a>
-    </div>
+    <header>
+        <div class="navbar">
+            <a href="home.html">Home</a>
+            <a href="favorites.html">My Favorite Things</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="survey.html">Survey</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </header>
     <div class="main">In this section, I am going to go over some of my favorite films, video games, foods, artists &amp
         albums.</div>
 
@@ -147,7 +149,7 @@
             </div>
         </div>
     </div>
-    <div class="title_box">
+    <div class="title_box" style="width: 60%;">
         <div id="title">Music</div>
         <div class="contentMusic">
             <p>Artist</p>
