--- a/home.html
+++ b/home.html
@@ -8,22 +8,27 @@
     <title>Home</title>
 </head>
 
-<body>
-    <div class="navbar">
-        <a href="home.html">Home</a>
-        <a href="favorites.html">My Favorite Things</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="blog.html">Blog</a>
-        <a href="survey.html">Survey</a>
-        <a href="contact.html">Contact</a>
-    </div>
+<body class="home">
+    <header>
+        <div class="navbar">
+            <a href="home.html">Home</a>
+            <a href="favorites.html">My Favorite Things</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="survey.html">Survey</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </header>
 
     <div class="content">
-        Hello, my name is Petar Krstevski and I'm a student at the faculty of <br><img class="CVpic" src="https://i.imgur.com/xD0iC3l.jpg">electrical engineering and information
-        technologies
-        at Ss. Cyril and Methodius University-Skopje. I am a computer engineering major and I hope that in the future I will work more in this field. I was born on the 10th of August, 2000 and 
-        I am currently in my junior year. Other than college-related matters, my hobbies and interests are fairly mundane, I enjoy listening to music, playing chess and video games, watching 
-        films and series', but more on that some other time.
+        Hello, my name is Petar Krstevski and I'm a student at the <a href="https://feit.ukim.edu.mk/">Faculty of Electrical Engineering and Information
+                Technologies</a><img class="CVpic"
+            src="https://i.imgur.com/xD0iC3l.jpg">
+        at Ss. Cyril and Methodius University-Skopje. I major in computer engineering and I am currently in my junior year. I hope that in the future I
+        will work more in this field. I was born on the 10th of August, 2000 in Skopje, Macedonia. Before enrolling in
+        university, I got my high-school diploma at SUGS Gimnazija "Orce Nikolov". My hobbies and interests are fairly
+        standard, I enjoy listening to <a href="favorites.html"> music, playing video games, watching
+            movies and TV shows</a> as well as going out with friends. You can read more about my day-to-day life <a href="blog.html">here.</a> 
     </div>
 
 </body>
