--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Home</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -15,6 +15,7 @@
             <a href="favorites.html">My Favorite Things</a>
             <a href="gallery.html">Gallery</a>
             <a href="blog.html">Blog</a>
+            <a href="games.html">Games</a>
             <a href="survey.html">Survey</a>
             <a href="contact.html">Contact</a>
         </div>
