--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
             <a href="favorites.html">My Favorite Things</a>
             <a href="gallery.html">Gallery</a>
             <a href="blog.html">Blog</a>
+            <a href="games.html">Games</a>
             <a href="survey.html">Survey</a>
             <a href="contact.html">Contact</a>
         </div>
