--- a/survey.html
+++ b/survey.html
@@ -85,6 +85,7 @@
                     <option value="MFT">My Favorite Things</option>
                     <option value="Gallery">Gallery</option>
                     <option value="Blog">Blog</option>
+                    <option value="Games">Games</option>
                     <option value="Survey">Survey</option>
                     <option value="Contact">Contact</option>
                 </select><br><br>
