--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,10 @@
     <div class="main">
         <p><strong>You can reach me at the following links:</strong></p>
         <p class=link><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/512px-Gmail_icon_%282020%29.svg.png" id="gmail">E-mail: <a href="mailto:krstevski1petar@gmail.com">krstevski1petar@gmail.com</a></p>
+        <p class=link><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png">GitHub: <a href="https://github.com/krstevskipetar">https://github.com/krstevskipetar</a></p>
         <p class=link><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png">Instagram: <a href="https://www.instagram.com/pkrstevski1/">pkrstevski1</a></p>
         <p class=link><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Facebook_icon_2013.svg/768px-Facebook_icon_2013.svg.png">Facebook: <a href="https://www.facebook.com/profile.php?id=100008615229598">https://www.facebook.com/profile.php?id=100008615229598</a></p>
+        
     </div>
 </body>
 </html>
