--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
             <p id="caption"></p>
           </div>
         <figure>
-            <img class="galleryPic" id="photoByUser" onclick="loadModal()">
+            <img class="galleryPic" id="photoByUser" onclick="loaddModal()">
         <figcaption id="byUserCaption"></figcaption>
         </figure>
     </div>
